--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "koji-gold",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://192.168.2.29/WSDemo/",
   "dependencies": {
+    "@crestron/ch5-utilities-cli": "^0.1.52",
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
     "@fontsource/roboto": "^4.5.1",
@@ -17,7 +19,6 @@
     "@mui/icons-material": "^5.2.5",
     "@mui/material": "^5.2.5",
     "@mui/styles": "^5.2.3",
-    "@reduxjs/toolkit": "^1.7.1",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
@@ -25,7 +26,7 @@
     "jquery": "^3.6.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-router-dom": "^6.2.1",
+    "react-router-dom": "6",
     "react-scripts": "5.0.0",
     "sass": "^1.45.1",
     "web-vitals": "^2.1.2"
@@ -34,7 +35,9 @@
     "start": "export HTTPS=true&&SSL_CRT_FILE=cert.pem&&SSL_KEY_FILE=key.pem react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "build:archive": "yarn build && ch5-cli archive -p WSDemo -d build -o build ",
+    "build:deployweb": "ch5-cli deploy -H 192.168.2.29 -p -t web build/WSDemo.ch5z"
   },
   "eslintConfig": {
     "extends": [
