--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "6",
     "react-scripts": "5.0.0",
+    "react-use-websocket": "^3.0.0",
     "sass": "^1.45.1",
     "web-vitals": "^2.1.2"
   },
