--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "@emotion/styled": "^11.6.0",
     "@fontsource/roboto": "^4.5.2",
     "@fortawesome/fontawesome-svg-core": "^1.3.0",
-    "@fortawesome/pro-light-svg-icons": "^6.0.0",
     "@fortawesome/pro-duotone-svg-icons": "^6.0.0",
+    "@fortawesome/pro-light-svg-icons": "^6.0.0",
     "@fortawesome/pro-regular-svg-icons": "^6.0.0",
     "@fortawesome/pro-solid-svg-icons": "^6.0.0",
     "@fortawesome/pro-thin-svg-icons": "^6.0.0",
@@ -23,6 +23,7 @@
     "@testing-library/user-event": "^13.5.0",
     "babel-plugin-macros": "^3.1.0",
     "jquery": "^3.6.0",
+    "postal": "^2.0.6",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
