--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-router-dom": "6",
     "react-scripts": "5.0.0",
     "react-use-websocket": "^3.0.0",
+    "reconnecting-websocket": "^4.4.0",
     "sass": "^1.45.1",
     "web-vitals": "^2.1.2"
   },
